<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notebook</string>
    <string name="settings">Settings</string>
    <string name="allNotes">All Notes</string>
    <string name="search">Search…</string>
    <string name="back">Back</string>
    <string name="note">Add New Note</string>
    <string name="content">Content</string>
    <string name="enterNote">Enter Title…</string>
    <string name="enterContent">Enter Content…</string>
    <string name="addNew">New</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="noData">No data</string>
    <string name="notFound">Not Found</string>
</resources>