<?xml version="1.0" encoding="UTF-8" ?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogNewNoteLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?cardBackgroundColor"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <!-- ADD NOTE -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.1"
            android:text="@string/note"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- CLOSE BUTTON -->
        <Button
            android:id="@+id/btnClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:background="@drawable/baseline_cancel_24"
            android:backgroundTint="@color/softRed"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/enterNote"
        android:inputType="text"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:hint="@string/enterContent"
        android:inputType="text"
        android:textColorHint="@color/light_gray" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <!--SAVE BUTTON-->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="4dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </GridLayout>
</LinearLayout>