<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/light_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gunmetal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/noDataText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/noData"
                android:src="@android:drawable/ic_menu_report_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notFound"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/plus"
        android:layout_margin="16dp" />

    <ProgressBar
        android:id="@+id/notesProgress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:visibility="visible" />
</FrameLayout>